--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "html5-qrcode": "^2.2.1",
     "less-loader": "4.1.0",
     "process": "^0.11.10",
+    "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
     "react-dom": "^18.2.0",
