--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "authenticator": "^1.1.5",
     "buffer": "^6.0.3",
     "crypto-browserify": "^3.12.0",
+    "css-loader": "^6.7.1",
     "customize-cra": "^1.0.0",
     "html5-qrcode": "^2.2.1",
-    "less-loader": "4.1.0",
+    "less": "^4.1.3",
+    "less-loader": "^11.0.0",
     "process": "^0.11.10",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -29,6 +31,7 @@
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
+    "style-loader": "^3.3.1",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
