--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "crypto-browserify": "^3.12.0",
     "css-loader": "^6.7.1",
     "customize-cra": "^1.0.0",
+    "dotenv-webpack": "^8.0.1",
     "html5-qrcode": "^2.2.1",
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
+    "notp": "^2.0.3",
     "process": "^0.11.10",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
@@ -32,6 +34,7 @@
     "redux-persist": "^6.0.0",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
+    "thirty-two": "^1.0.2",
     "typescript": "*",
     "web-vitals": "^2.1.4"
   },
@@ -62,6 +65,7 @@
   "devDependencies": {
     "@types/authenticator": "^1.1.1",
     "@types/node-cron": "^3.0.2",
+    "@types/notp": "^2.0.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^22.0.0",
