--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
+    "react-beautiful-dnd": "^13.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
@@ -66,6 +67,7 @@
     "@types/authenticator": "^1.1.1",
     "@types/node-cron": "^3.0.2",
     "@types/notp": "^2.0.2",
+    "@types/react-beautiful-dnd": "^13.1.2",
     "@typescript-eslint/eslint-plugin": "^5.0.0",
     "eslint": "^8.0.1",
     "eslint-config-standard-with-typescript": "^22.0.0",
