--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "less": "^4.1.3",
     "less-loader": "^11.0.0",
     "notp": "^2.0.3",
+    "path-browserify": "^1.0.1",
     "process": "^0.11.10",
+    "protobufjs": "^7.1.0",
     "qrcode.react": "^3.1.0",
     "react": "^18.2.0",
     "react-app-rewired": "^2.2.1",
@@ -33,6 +35,7 @@
     "react-redux": "^8.0.2",
     "react-scripts": "5.0.1",
     "redux-persist": "^6.0.0",
+    "rfc4648": "^1.5.2",
     "stream-browserify": "^3.0.0",
     "style-loader": "^3.3.1",
     "thirty-two": "^1.0.2",
